--- a/package.json
+++ b/package.json
@@ -1,32 +1,35 @@
 {
-    "name": "messages-factory",
-    "version": "0.0.0",
-    "description": "Define your log messages in a dedicated file, then use them by their code",
-    "keywords": [
-        "message",
-        "log"
-    ],
-    "main": "index.js",
-    "scripts": {
-        "test": "node node_modules/mocha/bin/mocha",
-        "cover": "node node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R min"
-    },
-    "engine": {
-        "node": ">=6.0.0"
-    },
-    "repository": {
-        "url": "https://github.com/nauwep/messages-factory.git",
-        "type": "git"
-    },
-    "bugs": {
-        "url": "https://github.com/nauwep/messages-factory/issues"
-    },
-    "author": "nauwep <nauwep.dev@gmail.com>",
-    "license": "MIT",
-    "devDependencies": {
-        "istanbul": "^0.4.5",
-        "mocha": "^3.1.2",
-        "should": "^11.1.1"
-    },
-    "dependencies": {}
+  "name": "messages-factory",
+  "version": "0.0.0",
+  "description": "Define your log messages in a dedicated file, then use them by their code",
+  "keywords": [
+    "message",
+    "log"
+  ],
+  "main": "index.js",
+  "scripts": {
+    "test": "node node_modules/mocha/bin/mocha",
+    "cover": "node node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R min",
+    "coveralls": "rm -rf ./coverage && npm run cover && cat ./coverage/lcov.info | node ./node_modules/coveralls/bin/coveralls.js"
+  },
+  "engine": {
+    "node": ">=6.0.0"
+  },
+  "repository": {
+    "url": "https://github.com/nauwep/messages-factory.git",
+    "type": "git"
+  },
+  "bugs": {
+    "url": "https://github.com/nauwep/messages-factory/issues"
+  },
+  "author": "nauwep <nauwep.dev@gmail.com>",
+  "license": "MIT",
+  "devDependencies": {
+    "coveralls": "^2.11.14",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.1.2",
+    "mocha-lcov-reporter": "^1.2.0",
+    "should": "^11.1.1"
+  },
+  "dependencies": {}
 }
